--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-  fetch('https://docs.google.com/spreadsheets/d/1P0TCTu3rqSxXfMXAUHLpGGXbbrHvXE305Z_eGPmUMao/edit?usp=sharing')
+  fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vQzdapkrZoENDJWHZsLhdv8qV0metCNAj02ZuRbBN021pzOTF4a9KNiTsvrLdhYVp9CSCG-saCAVBCH/pubhtml')
     .then(response => response.json())
     .then(data => {
       // Process the data from Google Sheets here
