--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<h1>Testing</h1>
 <script>
   fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vQzdapkrZoENDJWHZsLhdv8qV0metCNAj02ZuRbBN021pzOTF4a9KNiTsvrLdhYVp9CSCG-saCAVBCH/pubhtml')
-    .then(response => response.json())
-    .then(data => {
-      // Process the data from Google Sheets here
-      console.log(data);
-    })
-    .catch(error => {
-      console.error('Error fetching data:', error);
-    });
+  .then(response => {
+    if (!response.ok) {
+      throw new Error('Network response was not ok');
+    }
+    return response.json(); // Parse the response as JSON
+  })
+  .then(data => {
+    // Process the data from Google Sheets here
+    console.log(data);
+  })
+  .catch(error => {
+    console.error('Error fetching data:', error);
+  });
+
 </script>
