--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">demo</a></li>
+            <li><a href="SheetRead.html">demo</a></li>
             <li><a href="#">Generate key</a></li>
         </ul>
     </nav>
