--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         </ul>
     </nav>
     <div class="container">
-        <h2>Welcome to Our Website</h2>
-        <p>This is a simple homepage for your website. You can edit and expand upon this template to create your website's content.</p>
+        <h2>Duck-Race</h2>
+        <p>Welcome</p>
     </div>
 </body>
 </html>
