--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #fff;
         }
 
         header {
-            background-color: #333;
+            background-color: #fff;
             color: #fff;
             text-align: center;
             padding: 10px 0;
         }
 
         nav {
-            background-color: #444;
+            background-color: #fff;
             text-align: center;
         }
 
@@ -45,8 +45,6 @@
             margin: 20px auto;
             padding: 20px;
             background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
