--- a/index.html
+++ b/index.html
@@ -3,27 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
-    <style>
-        /* Basic CSS for styling the page */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+    <title>Thing for richard</title>
+    .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
             background-color: #fff;
         }
-
-        header {
-            background-color: #fff;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        nav {
-            background-color: #fff;
+     nav {
+            background-color: #444;
             text-align: center;
         }
+
 
         nav ul {
             list-style-type: none;
@@ -39,15 +30,8 @@
             text-decoration: none;
             color: #fff;
         }
-
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-        }
-    </style>
 </head>
+    
 <body>
     <header>
         <h1>Your Website</h1>
@@ -55,13 +39,14 @@
     <nav>
         <ul>
             <li><a href="SheetRead.html">demo</a></li>
-            <li><a href="#">Generate key</a></li>
+            <li><a href="gen.html">Generate key</a></li>
         </ul>
     </nav>
     <div class="container">
         <h2>Duck-Race</h2>
         <p>Welcome</p>
     </div>
+        
 </body>
 </html>
 
