--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thing for richard</title>
+   <style>
     .container {
             max-width: 800px;
             margin: 20px auto;
@@ -30,11 +31,12 @@
             text-decoration: none;
             color: #fff;
         }
+    </style>
 </head>
     
 <body>
     <header>
-        <h1>Your Website</h1>
+        <h1>Richards Website</h1>
     </header>
     <nav>
         <ul>
