--- a/index.html
+++ b/index.html
@@ -51,4 +51,10 @@
         
 </body>
 </html>
+<script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-storage.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.0/uuid.min.js"></script>
+<script src="firebase-config.js"></script>
+<script src="index.js"></script>
 
