--- a/random.html
+++ b/random.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Random Number Generator</title>
+    <!-- Include the Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-storage.js"></script>
     <script src="random.js"></script>
 </head>
 <body>
@@ -10,3 +13,4 @@
     <button id="redirectButton">Go to index.html</button>
 </body>
 </html>
+
